Cleanup styles and add initial post

--- a/posts/2018-03-14-getting-to-know-quilljs.mdx
+++ b/posts/2018-03-14-getting-to-know-quilljs.mdx
@@ -1,5 +1,6 @@
 ---
 name: "Getting to know QuillJS (Parchment, Blots, and Lifecycle)"
+updated: 2020/10/04
 tags:
     - Javascript
     - contenteditable
