fix lang declaration

--- a/posts/2020-11-06-speeding-up-php-in-docker.mdx
+++ b/posts/2020-11-06-speeding-up-php-in-docker.mdx
@@ -1,5 +1,6 @@
 ---
 name: Speeding Up PHP in Docker w/ XDebug
+slug: "speeding-up-php-in-docker-xdebug"
 updated: 2020/11/06
 tags:
     - PHP
@@ -77,7 +78,7 @@ This is the bulk of the required configuration. It does the following:
     -   A query parameter of `?XDEBUG_SESSION_START`
     -   Many possible cookie values used by various browser plugins and IDEs.
 
-```conf
+```
 http {
     # ... Other top level config.
 
@@ -124,7 +125,7 @@ http {
 
 **Debug PHP config**
 
-```conf
+```
 [www]
 listen = /shared/var/run/php-fpm-xdebug.sock
 listen.owner = www-data
@@ -149,7 +150,7 @@ xdebug.remote_cookie_expire_time = 1
 
 **"Production-ish" PHP config**
 
-```conf
+```
 [www]
 listen = /shared/var/run/php-fpm.sock
 
